# Aire_health_agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/core/: agent_state.py  agent_tools.py  product_agent.py
app/service/: routes.py  schemas.py
config/: config.py
data/: aire_mckesson_catalog.json  product_categories.json  tax_categories.json
database/sql_db/: db.py  db_utils.py
database/vector_db/: insert_data.py  vector_store.py  verify_collection.py
utils/: helper.py  prompts.py
